syntax = "proto3";

package greeterudemy;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest
{
  Person person =1;
}

message GreetingResponse
{
  string result =1;
}

service GreetingService{
        rpc Greet (GreetingRequest) returns (GreetingResponse) {}
}

